*Send TransactionTerminated message when TU mistakenly CANCELs a client INVITE transaction that has not yet received a provisional
*ParseException is now the only exception type that is thrown due to parse errors.
*Better support for WWW-Authenticate in Helper::authenticateRequest() and Helper::authenticateRequestWithA1().
*Improved logging of exceptions

===Bug fixes===
*Fixed crash bug associated with Transports that run their own process loop
*Fixed memory leaks caused by certain types of garbage in certain types of parameters
*Fixed a memory leak caused by requests with a garbage topmost Via
*Fixed a bug where INVITE responses would go back to the source port over UDP
*Fixed bug where qop-options was being tokenized incorrectly by the digest auth code
*Support URI entries in the x509v3 subjectAltName
*Fixed a bug where unknown headers that were a prefix of another unknown header would be classified as the same.
*Removed build warning in MsgHeaderScanner

==DUM==
===New features===
*Added UAC PRACK support
*Added asynchronous (message-passing) interface to the various subclasses of BaseUsage:
**ClientRegistration
**ClientSubscription
**ClientPagerMessage
**ClientPublication
**InviteSession
**ServerInviteSession
**ServerPagerMessage
*Allow mutex lock while in DUM's main process loop for thread safety
*Added MasterProfile::removeSupportedMimeType method
*Implemented Handle::operator<, allowing for use with set or map
*Changed signature of ImsAuthUri methods to accomodate a username that includes the domain

===Bug fixes===
*Fixed crash bug that could happen when a ClientSubscription re-establishes itself in a new Dialog after the other endpoint has crashed
*Fixed problem where ReferredBy was set to contact instead of aor - 2 cases
*Calling Dialog::end() will now end subscription usages
*Fixed bug where MergedRequestKey::mCheckRequestUri was not being initialized in c'tor